# born-in-hell

./: .env  .gitignore  Cargo.toml  codecov.yml  rust-toolchain.toml
.github/workflows/: merge.yml
assets/maps/: map.tmx  test_room.glb
assets/sprites/: player.aseprite
config/: graphics.toml  input.toml
crates/game_core/: Cargo.toml
crates/game_core/src/: aabb.rs  camera.rs  config.rs  debug.rs  key_converter.rs  lib.rs  states.rs
crates/game_core/src/animation/: mod.rs
crates/game_core/src/player/: mod.rs
crates/game_core/src/tiled/: mod.rs  objects.rs  properties.rs
crates/game_core/src/world/: mod.rs
crates/game_logic/: Cargo.toml
crates/game_logic/src/: lib.rs
crates/game_service/: Cargo.toml
crates/game_service/src/: lib.rs
crates/game_service/src/camera/: follow.rs  mod.rs
crates/game_service/src/player/: init.rs  mod.rs
crates/game_ui/: Cargo.toml
crates/game_ui/src/: lib.rs
crates/game_world/: Cargo.toml
crates/game_world/src/: lib.rs  test_room.rs
crates/game_world/src/level/: level.rs  mod.rs
src/: game_camera.rs  main.rs
