[package]
name = "born-in-hell"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[[bin]]
name = "born-in-hell"
path = "src/main.rs"

[workspace]
members = [
    "crates/game_core",
    "crates/game_logic",
    "crates/game_service",
    "crates/game_world",
    "crates/game_ui"
]

##############################################
#                 Profiles                   #
##############################################

# RELEASE
[profile.release]
panic = "unwind"
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# DEVELOPMENT
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = true

##############################################
#                  Crates                    #
##############################################

# All game relevant structs, events, func etc...
[dependencies.game_core]
path = "crates/game_core"
features = ["v_ram_nvml", "v_ram_dxgi", "v_ram_metal"]

# Game logic function no systems! This crate stores all technical functions
# for other creations!
[dependencies.game_logic]
path = "crates/game_logic"

# Game services for handle all system stuffs.
[dependencies.game_service]
path = "crates/game_service"

# Game world and his terrain, vegetation, etc.
[dependencies.game_world]
path = "crates/game_world"

# Game uis and all ui objects present here
[dependencies.game_ui]
path = "crates/game_ui"

##############################################
#               Dependencies                 #
##############################################

# Main dependency for the project. This is absolutely needed for work with
# graphics and systems. If you change the Version, make sure that you change it
# in all crates of the project!
[dependencies.bevy]
version = "0.16.1"
default-features = true

# Bevy Inspector UI for debug things
[dependencies.bevy-inspector-egui]
version = "0.33.1"
features = ["egui_clipboard"]

# Bevy Rapier2D for initialize game physics
[dependencies.bevy_rapier2d]
version = "0.31.0"
features = ["default", "simd-stable", "debug-render-2d"]

[dependencies.bevy_ecs_tilemap]
version = "0.16.0"
features = ["atlas"]

# Tracing Subscriber for look up traces in logs and for print them
# into a log file
[dependencies.tracing-subscriber]
version = "0.3.20"

# Date util for handle colcks
[dependencies.chrono]
version = "0.4.42"
features = ["clock"]

# Environment file support for better settings
[dependencies.dotenvy]
version = "0.15.7"

##############################################
#             Dev-Dependencies               #
##############################################

# For test which needed serialization
[dev-dependencies.serial_test]
version = "3.2.0"
