[package]
name = "game_core"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[lib]
name = "game_core"
path = "src/lib.rs"

[features]
default = []
# Use dep to control the dependencies which ar activated by the feature
v_ram_nvml  = ["dep:nvml"]  # NVIDIA per-process (Win/Linux)
v_ram_dxgi  = ["dep:windows"]       # Windows adapter-wide (AMD & NVIDIA)
v_ram_metal = ["dep:metal"]         # macOS device-wide

##############################################
#               Dependencies                 #
##############################################

# Main dependency for the project. This is absolutely needed for work with
# graphics and systems. If you change the Version, make sure that you change it
# in all crates of the project!
[dependencies.bevy]
version = "0.16.1"
default-features = true

# Serde for seralize structs
[dependencies.serde]
version = "1.0.225"
features = ["derive"]

# Serde JSON for handle struct by json files
[dependencies.serde_json]
version = "1.0.145"

# Random generated u32 / u64 / i32 / i64 etc
[dependencies.rand]
version = "0.9.2"

# TOML file support for our config files
[dependencies.toml]
version = "0.9.6"
features = ["parse", "display"]

# Fetch system information for windows, linux and Mac
[dependencies.sysinfo]
version = "0.37.0"

# NVML for NVIDIA cards under linux
[target.'cfg(target_os = "linux")'.dependencies.nvml]
package = "nvml-wrapper"
version = "0.11.0"
optional = true

# DXGI for ADM / NVIDIA cards under windows
[target.'cfg(windows)'.dependencies.windows]
version = "0.62.0"
optional = true
features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common"]

# METAL for aple devices cards
[target.'cfg(target_os = "macos")'.dependencies.metal]
version = "0.32.0"
optional = true
