[package]
name = "game_service"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[lib]
name = "game_service"
path = "src/lib.rs"

##############################################
#                  Crates                    #
##############################################

# Game Core for handle global states and resources
[dependencies.game_core]
path = "../game_core"

# Game logic for the services. This crate gives only functional methods.
[dependencies.game_logic]
path = "../game_logic"


##############################################
#               Dependencies                 #
##############################################

# Main dependency for the project. This is absolutely needed for work with
# graphics and systems. If you change the Version, make sure that you change it
# in all crates of the project!
[dependencies.bevy]
version = "0.16.1"
default-features = true

# Serde JSON for handle struct by json files
[dependencies.serde_json]
version = "1.0.145"

# Bevy Rapier2D for initialize game physics
[dependencies.bevy_rapier2d]
version = "0.31.0"
features = ["simd-stable", "debug-render-2d"]

[dependencies.bevy_ecs_tilemap]
version = "0.16.0"
features = ["atlas"]

[dependencies.tiled]
version = "0.15.0"
default-features = false