[package]
name = "game_world"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[lib]
name = "game_world"
path = "src/lib.rs"

##############################################
#                  Crates                    #
##############################################

# Game Core for handle global states and resources
[dependencies.game_core]
path = "../game_core"

##############################################
#               Dependencies                 #
##############################################

# Main dependency for the project. This is absolutely needed for work with
# graphics and systems. If you change the Version, make sure that you change it
# in all crates of the project!
[dependencies.bevy]
version = "0.16.1"
default-features = true

# Rapier3D for handle world collisions and player interaction with the world.
# The init state is in main.rs!
[dependencies.bevy_rapier3d]
version = "0.31.0"
features = [
    "default",
    "simd-stable",
    "debug-render-3d"
]
